@@ -1,6 +1,8 @@
 Version 4.16 -        2011, by Per Øyvind Karlsen
 
-- support translate_message and raw_message options for URPM::Transaction->check()
+- add setInternalVariable() for changing various variables for debugging etc.
+  within rpmlib
+- support translate_message & raw_message options for URPM::Transaction->check()
 - support versioned suggests
 
 Version 4.15 - 19 Feb 2011, by Per Øyvind Karlsen
